--- a/signup.html
+++ b/signup.html
@@ -256,7 +256,7 @@ a Video</a> </div>
 <div class="container">
 <div class="floating-form">
 <h1>Sign Up</h1>
-<form class="signup-form" id="signup-form" action="https://legacy.anistick.com/ajax/doSignUp" method="post">
+<form class="signup-form" id="signup-form" action="./ajax/doSignUp.js" method="post">
   <div class="form-row">
   <div class="form-input"> <label class="fi email" for="signup-email">Email
 Address</label> <input id="signup-email" name="email" placeholder="EMAIL ADDRESS" value="" type="text"> </div>
