--- a/signup.html
+++ b/signup.html
@@ -257,6 +257,7 @@ a Video</a> </div>
 <div class="floating-form">
 <h1>Sign Up</h1>
 <form class="signup-form" id="signup-form" action="./ajax/doSignUp.js" method="post">
+<script> 1{"email_error":"Please enter your Email","password_error":" ","nickname_error":" ","terms_error":" ","error":"Unable to Sign Up, please try again."} </script>
   <div class="form-row">
   <div class="form-input"> <label class="fi email" for="signup-email">Email
 Address</label> <input id="signup-email" name="email" placeholder="EMAIL ADDRESS" value="" type="text"> </div>
