--- a/signup.html
+++ b/signup.html
@@ -33,88 +33,7 @@
     #main .btn:hover{background-color:#f26724; outline:none;  border-radius: 2px; color:#f1f1f1; border:1px solid #f1f1f1;
     -webkit-transition: 1s; -moz-transition: 1s; transition: 1s; }
 </style>
-<script>
-    
-    function registration()
-	{
-
-		var name= document.getElementById("t1").value;
-		var email= document.getElementById("t2").value;
-		var uname= document.getElementById("t3").value;
-		var pwd= document.getElementById("t4").value;			
-		var cpwd= document.getElementById("t5").value;
-		
-        //email id expression code
-		var pwd_expression = /^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-])/;
-		var letters = /^[A-Za-z]+$/;
-		var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-
-		if(name=='')
-		{
-			alert('Please enter your name');
-		}
-		else if(!letters.test(name))
-		{
-			alert('Name field required only alphabet characters');
-		}
-		else if(email=='')
-		{
-			alert('Please enter your user email id');
-		}
-		else if (!filter.test(email))
-		{
-			alert('Invalid email');
-		}
-		else if(uname=='')
-		{
-			alert('Please enter the user name.');
-		}
-		else if(!letters.test(uname))
-		{
-			alert('User name field required only alphabet characters');
-		}
-		else if(pwd=='')
-		{
-			alert('Please enter Password');
-		}
-		else if(cpwd=='')
-		{
-			alert('Enter Confirm Password');
-		}
-		else if(!pwd_expression.test(pwd))
-		{
-			alert ('Upper case, Lower case, Special character and Numeric letter are required in Password filed');
-		}
-		else if(pwd != cpwd)
-		{
-			alert ('Password not Matched');
-		}
-		else if(document.getElementById("t5").value.length < 6)
-		{
-			alert ('Password minimum length is 6');
-		}
-		else if(document.getElementById("t5").value.length > 12)
-		{
-			alert ('Password max length is 12');
-		}
-		else
-		{				                            
-               alert('Thank You for Login & You are Redirecting to Campuslife Website');
-			   // Redirecting to other page or webste code. 
-			   window.location = "http://legacy.anistick.com/dashboard"; 
-		}
-	}
-	function clearFunc()
-	{
-		document.getElementById("t1").value="";
-		document.getElementById("t2").value="";
-		document.getElementById("t3").value="";
-		document.getElementById("t4").value="";
-		document.getElementById("t5").value="";
-	}
-
-    
-    </script>
+	<script src="/js/signUp_webBrave_1.38.111_chromiumBase_101.0.4951.54_Official64b.js" />
 	<body>
 	<!-- Main div code -->
 	<div id="main">
