--- a/signup.html
+++ b/signup.html
@@ -19,13 +19,11 @@
     border-bottom:3px double #f1f1f1; padding-top:20px;
     }
     
-    #main table{font-family:"Comic Sans MS", cursive;}
-    /* css code for textbox */
+    #main table{font-family:"Droid Sans", cursive;}
     #main .tb{height:28px; width:230px; border:1px solid #f26724; color:#fd7838; font-weight:bold; border-left:5px solid #f7f7f7; opacity:0.9;}
     
     #main .tb:focus{height:28px; border:1px solid #f26724; outline:none; border-left:5px solid #f7f7f7;}
 
-    /* css code for button*/
     #main .btn{width:150px; height:32px; outline:none;  color:#f7f7f7; font-weight:bold; border:0px solid #f26724; 
     text-shadow: 0px 0.5px 0.5px #fff; border-radius: 2px; font-weight: 600; color: #f26724; letter-spacing: 1px; 
     font-size:14px; background-color:#f1f1f1; -webkit-transition: 1s; -moz-transition: 1s; transition: 1s;}
@@ -35,12 +33,10 @@
 </style>
 	<script src="/js/signUp_webBrave_1.38.111_chromiumBase_101.0.4951.54_Official64b.js" />
 	<body>
-	<!-- Main div code -->
 	<div id="main">
 	<div class="h-tag">
 	<h2>Create Your Account</h2>
 	</div>
-	<!-- create account div -->
 	<div class="login">
 	<table cellspacing="2" align="center" cellpadding="8" border="0">
 	<tr>
@@ -71,8 +67,6 @@
 	</tr>
 	</table>
 	</div>
-	<!-- create account box ending here.. -->
 	</div>
-	<!-- Main div ending here... -->
 	</body>
 	</html>
