--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-nice try
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html><head>
+  
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+  <title>Welcome, to Anistick</title>
+
+  
+</head><body style="color: rgb(0, 0, 0); background-color: rgb(204, 204, 204);" alink="#000099" link="#000099" vlink="#990099">
+<div style="text-align: left; background-color: rgb(51, 51, 51);"><img style="width: 147px; height: 28px;" alt="" src="file:///C:/Users/13139/Documents/signup_files/logo.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<br>
+<div style="text-align: center; background-color: rgb(204, 0, 0);"><big><big><big><span style="font-family: Droid Sans;"><br>
+<span style="color: white;">Welcome to Anistick </span></span></big></big></big><br>
+<br>
+<br>
+<span style="font-family: Droid Sans; color: white;">Anistick is a 2010
+- 2013 GoAnimate revival</span><span style="font-family: Droid Sans;"><span style="color: white;"> that is inspired by Wrapper 2. (shoutout to
+mega)<br>
+Users can share their videos onto the platform! As long as you don't
+put anything controversial that'll get us shutdown!<br>
+So, have fun with Anistick! This isn't a competition against W2, or any
+LVM Clone. This is just a project that is made for<br>
+fun! It's predecessor, SeinfeldFire's assets will be seen in the
+Anistick archive.<br>
+<br>
+<br>
+<br>
+<br>
+</span></span>
+<div style="text-align: left; background-color: rgb(204, 204, 204);"><span style="font-family: Droid Sans;"><span style="color: white;"></span></span><br style="color: white;">
+<div style="text-align: center; background-color: rgb(255, 102, 0);"><span style="font-family: Droid Sans; color: white;">Sign Up</span><br>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<span style="font-family: Droid Sans;"><span style="color: white;">
+<a href="#" class="myButton">Sign Up</a></span></span></div>
+</div>
+<style>.myButton {
+	box-shadow:inset 0px 1px 0px 0px #ff6600;
+	background-color:#fa6603;
+	border-radius:6px;
+	border:1px solid #ff8400;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #fc6500;
+}
+.myButton:hover {
+	background-color:#ff8838;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+        </style></div>
+
+</body></html>
