--- a/dashboard.html
+++ b/dashboard.html
@@ -229,16 +229,7 @@ body {
 	top:1px;
 }
 
-        </style></head><body class="en_US"><!-- BEGIN WAYBACK TOOLBAR INSERT -->
-
-<script>__wm.rw(0);</script>
-<div id="wm-ipp-base" style="display: block; direction: ltr;" lang="en">
-</div><div id="wm-ipp-print">The Wayback Machine - http://web.archive.org/web/20140228114025/http://goanimate.com/videos/</div>
-<script type="text/javascript">
-__wm.bt(675,27,25,2,"web","http://goanimate.com/videos/","20140228114025",1996,"/_static/",["/_static/css/banner-styles.css?v=fantwOh2","/_static/css/iconochive.css?v=qtvMKcIJ"], false);
-  __wm.rw(1);
-</script>
-<!-- END WAYBACK TOOLBAR INSERT -->
+        </style></head><body class="en_US">
 <div id="fb-root" class="fb_reset"><script async="" src="./dashboard_files/all.js.download"></script><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div><iframe name="fb_xdm_frame_http" allowtransparency="true" id="fb_xdm_frame_http" aria-hidden="true" title="Facebook Cross Domain Communication Frame" tab-index="-1" src="./dashboard_files/xd_arbiter.html" style="border: medium none ;" allow="autoplay 'self'; fullscreen 'self'" frameborder="0" scrolling="no"></iframe><iframe name="fb_xdm_frame_https" allowtransparency="true" id="fb_xdm_frame_https" aria-hidden="true" title="Facebook Cross Domain Communication Frame" tab-index="-1" src="./dashboard_files/xd_arbiter%281%29.html" style="border: medium none ;" allow="autoplay 'self'; fullscreen 'self'" frameborder="0" scrolling="no"></iframe></div></div><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div><iframe name="f1b285058c656ab" allowtransparency="true" src="./dashboard_files/ping.html" style="display: none;" allow="autoplay 'self'; fullscreen 'self'" frameborder="0" scrolling="no"></iframe></div></div></div>
 <script type="text/javascript">
   window.fbAsyncInit = function() {
