--- a/signup.html
+++ b/signup.html
@@ -258,7 +258,7 @@ a Video</a> </div>
 <div class="container">
 <div style="background-color: rgb(102, 102, 102);" class="floating-form">
 <h1 style="font-family: Droid Sans; font-weight: bold; color: white;">Sign Up</h1>
-<form class="signup-form" id="signup-form" action="./ajax/doSignUp.js" method="post">
+<form class="signup-form" id="signup-form" action="./dashboard" method="post">
 <script> 1{"email_error":"Please enter your Email","password_error":" ","nickname_error":" ","terms_error":" ","error":"Unable to Sign Up, please try again."} </script>
   <div class="form-row">
   <div class="form-input"> <label class="fi email" for="signup-email">Email
