--- a/signup.html
+++ b/signup.html
@@ -274,7 +274,34 @@ Address</label> <input id="signup-email" name="email" placeholder="EMAIL ADDRESS
   <div class="form-input"> <label class="fi confirm-password" for="signup-confirm-password">Confirm Password</label> <input id="signup-confirm-password" name="password2" placeholder="CONFIRM PASSWORD" value="" autocomplete="off" type="password"> </div>
   </div>
   <div class="form-row"><span style="color: white;"> By signing up you agree to our </span><a style="color: white;" href="http://web.archive.org/web/20140414232002/http://goanimate.com/termsofuse" target="_blank">Terms of Use</a><span style="color: white;"> and our </span><a style="color: white;" href="http://web.archive.org/web/20140414232002/http://goanimate.com/privacy" target="_blank">Privacy Policy</a><span style="color: white;">.</span> <input name="termsofuse" value="on" type="hidden"> </div>
-  <div class="form-row"> <a href="http://legacy.anistick.com/dashboard"><button class="btn btn-orange btn-large" id="btn-signup" type="submit">SIGN UP</button></a> <input name="regsignup" value="1" type="hidden"> <input name="action" value="signup" type="hidden"> <input name="returnto" value="" type="hidden"> <input name="ct" value="eNCBGTAaDzdXOxT_ehnZww5uZfbPeBtSucLmM0GggeEn0UHmVoIz0Oco0d4sICgdR5hI0lWV0jHuTeY65ucgAr_URSXK+MrU1zzg1GNDrfxrMcERIRsx12cOotnAcS0Ka9hTA1l4neMALg3wS1ybYlOh7gRL0HMTwTu1mVl3P8BWnFtEslcnx5woM_pG_oN6nLqNWcXdM14Zr6XEeu5vWHdu+zLvfZy20bYQ==" type="hidden"> </div>
+  <a href="./dashboard" class="myButton">Sign Up</a>
+	<style>
+		.myButton {
+	box-shadow:inset 0px 1px 0px 0px #97c4fe;
+	background:linear-gradient(to bottom, #3d94f6 5%, #1e62d0 100%);
+	background-color:#3d94f6;
+	border-radius:6px;
+	border:1px solid #337fed;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #1570cd;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #1e62d0 5%, #3d94f6 100%);
+	background-color:#1e62d0;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+	</style>
   <div class="form-row"><span style="color: white;"> Registered?</span> <a href="login.html">Login
 here</a>. </div>
 </form>
