--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Dec 25, 2022 15:37:25").getTime();
+var countDownDate = new Date("Jun 25, 2022 15:37:25").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -35,14 +35,14 @@ var x = setInterval(function() {
   // If the count down is finished, write some text
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "Anistick is here! This link will be updated when the dev is ready to put in the new Anistick here!";
   }
 }, 1000);
   </script>
 </head><body>
 <br>
 <br>
-Anistick&nbsp; Legacy will be released on December 25 2022.<br>
+Anistick&nbsp; Legacy will be released on June 25 2022.<br>
 
 <br>
 </body></html>
