--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   
 <!-- Display the countdown timer in an element -->
-  <p id="demo">232d 18h 14m 12s </p>
+  <p id="demo"><noscript>Please turn on JavaScript.</noscript></p>
 
 
   <script>
